crates/toml/tests/snapshots/invalid/bool/mixed-case.stderr
TOML parse error at line 1, column 35
  |
1 | mixed-case              = valid   = False
  |                                   ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 1, column 27
  |
1 | mixed-case              = valid   = False
  |                           ^^^^^
string values must be quoted, expected literal string
